--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 /*===== GOOGLE FONTS =====*/
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open Sans:i,500,600");
 
 /*===== VARIABLES CSS =====*/
 :root {
@@ -15,7 +15,7 @@
   --container-color: #fb2270;
 
   /*========== Font and typography ==========*/
-  --body-font: "Poppins", sans-serif;
+  --body-font: "Open Sans", sans-serif;
   --biggest-font-size: 2.25rem;
   --h1-font-size: 1.5rem;
   --h2-font-size: 1.25rem;
@@ -277,6 +277,7 @@ img {
 
 .home__img {
   width: 300px;
+  border-radius: 0.5rem;
   justify-self: center;
 }
 
